tests/parser/syntax-errors/unknown-type/unknown_type_list.choc
# RUN: choco-opt "%s" | filecheck "%s" --strict-whitespace

a : [random] = 0

# CHECK:      SyntaxError (line 3, column 6): Unknown type.
# CHECK-NEXT: >>>a : [random] = 0
# CHECK-NEXT: >>>-----^
